# apex-react

./: .env  .env.example  .gitignore  README.md  dump.sh  eslint.config.js  etit_module_dump.txt  fuel-dump.txt  index.html  package-lock.json  package.json  project-dump.txt  scratch.cjs  tailwind.config.ts  tsconfig.json  used_keys.txt  vite.config.ts
.github/workflows/: deploy.yml  release.yml
public/animations/: construction.lottie  location_radar.lottie  success.lottie
scratch/: audit_locales.cjs  diff_locales.cjs  sync_statistics_delta.py
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: console-silencer.ts  index.css  main.tsx
src/app/providers/: index.tsx
src/app/router/: index.tsx  protected-route.tsx
src/assets/animations/: receipt.lottie  warning.lottie
src/entities/auth/: api.ts  queries.ts  schemas.ts
src/entities/car/: api.ts  queries.ts  schemas.ts
src/entities/driver/: api.ts  queries.ts  schemas.ts
src/entities/driver-analytics/: api.ts  queries.ts  schemas.ts
src/entities/driver-expense/: api.ts  queries.ts  schemas.ts
src/entities/driver-loan/: api.ts  queries.ts  schemas.ts
src/entities/etit-vehicle/: api.ts  cairo.ts  playback.ts  queries.ts  schemas.ts
src/entities/fee-mapping/: api.ts  queries.ts  schemas.ts
src/entities/fuel-event/: api.ts  queries.ts  schemas.ts
src/entities/mapping/: api.ts  queries.ts  schemas.ts
src/entities/oil-change/: api.ts  queries.ts  schemas.ts
(+181 files in other folders)
