[package]
name = "apex-fleet"
version = "0.1.0"
description = "Apex — Fleet Management desktop client"
authors = ["Apex Transport"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "apex_fleet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
